<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F7F9"
    android:orientation="vertical"

    tools:context=".activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/userPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                tools:ignore="ContentDescription" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/username"
                    android:textColor="@android:color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userEmailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/userNameTitle"
                    android:text="@string/useremail"
                    android:textColor="@android:color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userCountryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/userEmailTitle"
                    android:text="@string/userCountry"
                    android:textColor="@android:color/black"
                    android:textSize="13sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <EditText
                android:id="@+id/updateCountryEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:hint="@string/edit_hint"
                android:visibility="gone" />


            <Button
                android:id="@+id/editButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:enabled="true"

                android:text="@string/edit" />

            <Button
                android:id="@+id/cancelEditionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"

                android:text="@string/cancel"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/login_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:textColor="@color/blue_text"
        android:text="@string/login_again" />


</LinearLayout>
